--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>RPG</title>
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script type="text/javascript">
+      var Ip=returnCitySN['cip']
+      var cityname=returnCitySN['cname']
+      localStorage.setItem('Ip', Ip)
+      localStorage.setItem('cityname', cityname)
+    </script>
   </head>
   <body>
     <div id="app"></div>
